// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Rotate component component renders invisible 1`] = `
<AnimatedComponent
  duration={100}
  startWhen={false}
  style={
    Object {
      "transform": Array [
        Object {
          "rotate": "0deg",
        },
        Object {
          "perspective": 1000,
        },
      ],
    }
  }
/>
`;

exports[`Testing Rotate component component renders visible 1`] = `
<AnimatedComponent
  duration={100}
  startWhen={true}
  style={
    Object {
      "transform": Array [
        Object {
          "rotate": "0deg",
        },
        Object {
          "perspective": 1000,
        },
      ],
    }
  }
/>
`;
